Added sample run code to notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,6 +11,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\"receiver_name\": \"Elwood Blues\",\n",
+    "          \"sender_name\": \"Jake Blues\",\n",
+    "          \"receiver_gender\": \"male\",\n",
+    "          \"sender_gender\": \"male\",\n",
+    "          \"lang\": \"DE\",\n",
+    "          \"formal\": False,\n",
+    "          \"vacation_location\": \"Chicago\",\n",
+    "          \"vacation_startdate\": 1536314400,\n",
+    "          \"vacation_enddate\": 1536516000\n",
+    "          }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hallo Elwood Blues,\n\nMeine Postkarte verlässt den Urlaubsort,\nich möchte von hier nie wieder fort.\nDenn nur hier ist das Paradies auf Erden,\nhier möchte ich alt werden.\n\nIn tiefster Ehrfurcht ersterben wir als Euer Königlichen Majestät alleruntertänigst treu gehorsamste\nJake Blues\n"
+     ]
+    }
+   ],
+   "source": [
+    "from starting_formula_connector import StartingFormulaConnector\n",
+    "from random_saying_connector import RandomSayingConnector\n",
+    "from quote_connector import QuoteConnector\n",
+    "\n",
+    "text = \"\"\n",
+    "\n",
+    "text += StartingFormulaConnector(params).get_text()\n",
+    "text += RandomSayingConnector(params).get_text()\n",
+    "text += QuoteConnector(params).get_text()\n",
+    "\n",
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
