Added wikipedia firstline scraping

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hallo Elwood Blues,\n\nMeine Postkarte verlässt den Urlaubsort,\nich möchte von hier nie wieder fort.\nDenn nur hier ist das Paradies auf Erden,\nhier möchte ich alt werden.\n\nIn tiefster Ehrfurcht ersterben wir als Euer Königlichen Majestät alleruntertänigst treu gehorsamste\nJake Blues\n"
+      "Hallo Elwood Blues,\n\nIch bin hier in Chicago. Chicago (deutsche Schreibweise: Chikago, Aussprache: [ʃɪˈkɑːgoʊ]; ) ist eine Stadt am Südwestufer des Michigansees im Bundesstaat Illinois in den Vereinigten Staaten von Amerika. Mit einer Einwohnerzahl von 2.722.389 (2014) ist sie die drittgrößte Stadt der Vereinigten Staaten.\n\nMeine Postkarte verlässt den Urlaubsort,\nich möchte von hier nie wieder fort.\nDenn nur hier ist das Paradies auf Erden,\nhier möchte ich alt werden.\n\nLeben Sie wohl! und auf freundliches Wiedersehen. Ihre ergebene\nJake Blues\n"
      ]
     }
    ],
@@ -46,10 +46,13 @@
     "from starting_formula_connector import StartingFormulaConnector\n",
     "from random_saying_connector import RandomSayingConnector\n",
     "from quote_connector import QuoteConnector\n",
+    "from wikipedia_firstlines_connector import WikipediaFirstlinesConnector\n",
     "\n",
     "text = \"\"\n",
     "\n",
     "text += StartingFormulaConnector(params).get_text()\n",
+    "text += WikipediaFirstlinesConnector(params).get_text()\n",
+    "text += \"\\n\\n\"\n",
     "text += RandomSayingConnector(params).get_text()\n",
     "text += QuoteConnector(params).get_text()\n",
     "\n",
